[package]
name = "sprout_test_task"
version = "0.1.0"
authors = ["Yaroslav Rogov <rogovyaroslav@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counted-array = "^0.1.2"
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4.11"
env_logger = "0.7.1"
